--- a/public/assets/site.css
+++ b/public/assets/site.css
@@ -1,6 +1,4 @@
-.bgimg-1,
-.bgimg-2,
-.bgimg-3 {
+.bgimg-1, .bgimg-2, .bgimg-3 {
   position: relative;
   /*opacity: 0.65;*/
   height: 250px;
@@ -8,6 +6,11 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.module {
+  scroll-behavior: smooth;
+  display: block;
 }
 
 .bgimg-1 {
@@ -25,17 +28,30 @@
   min-height: 100px;
 }
 
+.container-color {
+  background-color: #FF8C00;
+  -webkit-box-shadow: -2px 10px 82px 6px rgba(0, 0, 0, 0.66);
+  -moz-box-shadow: -2px 10px 82px 6px rgba(0, 0, 0, 0.66);
+  box-shadow: -2px 10px 82px 6px rgba(0, 0, 0, 0.66);
+}
+
 .padding {
   padding-top: 25px;
   padding-bottom: 25px;
 }
 
 .section-padding {
-  padding-top: 62px;
-  padding-bottom: 62px;
-  justify-content: center;
-  background-color: dark;
-  font-color: #fff;
+  padding-top: 60px;
+  padding-bottom: 0px;
+}
+
+.pad-sides {
+  padding-right: 0px;
+  padding-left: 0px;
+}
+
+.zero-r {
+  border-radius: 0 !important;
 }
 
 .caption {
@@ -47,21 +63,9 @@
   color: #000;
 }
 
-.nav>li>a.active,
-.nav>li>a:hover,
-.nav-item nav-link.active,
-.nav>li>a:focus {
-   background-color: blue !important;
-   color: white;
-}
-
-.header {
-  padding: 10px 16px;
-  background: black;
-  color: black;
-  position: fixed;
-  top: 0;
-  width: 100%; //background-color: rgba (256, 256, 256, 0.7);
+.nav>li>a.active, .nav>li>a:hover, .nav-item nav-link.active, .nav>li>a:focus {
+  background-color: blue !important;
+  color: white;
 }
 
 .navbar-fixed-top {
