--- a/public/assets/site.css
+++ b/public/assets/site.css
@@ -29,10 +29,25 @@
 }
 
 .container-color {
-  background-color: #FF8C00;
+  background-color: #ff6a00;
   -webkit-box-shadow: -2px 10px 82px 6px rgba(0, 0, 0, 0.66);
   -moz-box-shadow: -2px 10px 82px 6px rgba(0, 0, 0, 0.66);
   box-shadow: -2px 10px 82px 6px rgba(0, 0, 0, 0.66);
+}
+
+.text-orange {
+  color: #ff6a00;
+}
+
+.bg-azure {
+  background-color: white;
+}
+
+.card-padding {
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-right: 25px;
+  padding-left: 25px;
 }
 
 .padding {
@@ -46,8 +61,9 @@
 }
 
 .pad-sides {
-  padding-right: 0px;
-  padding-left: 0px;
+  padding-right: 2px;
+  padding-left: 2px;
+  /*padding-bottom: 2px;*/
 }
 
 .zero-r {
@@ -83,4 +99,10 @@
 .navbar-fixed-top {
   top: 0;
   border-width: 0 0 1px;
+}
+
+#project-summary.show {
+  transition: all 0.5s;
+  padding: 20px;
+  margin: 30px 0px;
 }
