--- a/public/assets/site.css
+++ b/public/assets/site.css
@@ -8,6 +8,12 @@
   background-size: cover;
 }
 
+.div:hover {
+  transition-property: all;
+  transition-property: transform;
+  transition: all 3s 1s;
+}
+
 .module {
   scroll-behavior: smooth;
   display: block;
@@ -33,10 +39,14 @@
 }
 
 .container-color {
-  background-color: #ff6a00;
+  background-color:black;
   /*  -webkit-box-shadow: -2px 10px 82px 6px rgba(0, 0, 0, 0.66);
   -moz-box-shadow: -2px 10px 82px 6px rgba(0, 0, 0, 0.66);
   box-shadow: -2px 10px 82px 6px rgba(0, 0, 0, 0.66);*/
+}
+
+.page-link:hover {
+  background-color: orange;
 }
 
 .shadow {
@@ -78,6 +88,11 @@
 
 .zero-r {
   border-radius: 0 !important;
+  border-color: orange;
+}
+
+.border-warning{
+  border-color: orange;
 }
 
 .caption {
@@ -89,14 +104,18 @@
   color: #000;
 }
 
-/*.nav>li>a.active, .nav>li>a:hover, .nav-item nav-link.active, .nav>li>a:focus {
-  background-color: blue !important;
+.nav>li>a.active, .nav>li>a:hover, .nav-item nav-link.active, .nav>li>a:focus {
+  background-color: rgb(0, 0, 7) !important;
   color: white;
-}*/
+}
 
 .nav>li>a:hover {
-  background-color: #3281ff !important;
+  background-color: #faad3a !important;
   color: white;
+}
+
+.btn:hover {
+background-color: orange;
 }
 
 .navbar-fixed-top {
@@ -122,7 +141,8 @@
 }
 
 .rowbg {
-  background-image: url("images/abd.jpg");
+  /* background-image: url("images/abd.jpg"); */
+  background-color: black;
 }
 
 #project-summary1.show, #project-summary2.show {
@@ -130,4 +150,14 @@
   /*transition: all 0.5s;*/
   padding: 20px;
   margin: 30px 0px;
+}
+
+.pad-edu {
+  padding:20px;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.btn-primary {
+  background-color:#000;
 }
