--- a/public/assets/site.css
+++ b/public/assets/site.css
@@ -50,9 +50,9 @@
 }
 
 .shadow {
-  -webkit-box-shadow: -2px 10px 82px 6px rgba(0, 0, 0, 0.66);
-  -moz-box-shadow: -2px 10px 82px 6px rgba(0, 0, 0, 0.66);
-  box-shadow: -2px 10px 82px 6px rgba(0, 0, 0, 0.66);
+  -webkit-box-shadow: -2px 10px 82px 6px orange;
+  -moz-box-shadow: -2px 10px 82px 6px orange;
+  box-shadow: -2px 10px 82px 6px orange;
 }
 
 .text-orange {
@@ -64,7 +64,7 @@
 }
 
 .card-padding {
-  padding-top: 25px;
+  padding-top: 26px;
   padding-bottom: 25px;
   padding-right: 25px;
   padding-left: 25px;
@@ -127,7 +127,7 @@ background-color: orange;
 
 .navbar-default {
   background-color: white;
-  border-color: #e7e7e7;
+  border-color: orange;
 }
 
 .exp-pad {
@@ -137,7 +137,7 @@ background-color: orange;
 
 .navbar-fixed-top {
   top: 0;
-  border-width: 0 0 1px;
+  border-width: 0 0 5px;
 }
 
 .rowbg {
@@ -160,4 +160,8 @@ background-color: orange;
 
 .btn-primary {
   background-color:#000;
+}
+
+label:hover {
+  color: orange;
 }
